fixed navbar overlap bug

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -27,7 +27,7 @@ nav {
     display: grid;
     place-content:  center;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar__list {
